--- a/index.html
+++ b/index.html
@@ -28,18 +28,18 @@
       </div>
     </header>
     <section class="hero">
-      <div class="container">
+      <div>
+        <img class="title-badge" src="./assets/1.svg" alt="badge" />
         <h1>
-          <span
-            >Que le <img class="title-badge" src="./1.svg" alt="badge" />
-          </span>
-          <span>plus fort, l'emporte!</span>
+          Que le
+          <br />
+          plus fort, <span class="italic">l'emporte!</span>
         </h1>
       </div>
       <div>
         <div class="card-container">
           <div class="card">
-            <img class="crown" src="./crown.svg" alt="crown" />
+            <img class="crown" src="./assets/crown.svg" alt="crown" />
           </div>
         </div>
       </div>
