--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
@@ -15,32 +15,97 @@
       <div class="progressbar"></div>
     </div>
     <header class="header">
-      <div class="container">
+      <div class="container-header">
         <div>
           <span class="badge">LA PISCINE</span>
         </div>
         <div>
-          <label class="switch">
+          <label class="switch" aria-label="Toggle theme">
             <input type="checkbox" checked />
             <span class="slider"></span>
           </label>
         </div>
       </div>
     </header>
-    <section class="hero">
-      <div>
+    <section class="section">
+      <div class="title-container">
+        <h1>Que le plus fort, <span class="italic">l'emporte!</span></h1>
         <img class="title-badge" src="./assets/1.svg" alt="badge" />
-        <h1>
-          Que le
-          <br />
-          plus fort, <span class="italic">l'emporte!</span>
-        </h1>
       </div>
-      <div>
-        <div class="card-container">
-          <div class="card">
-            <img class="crown" src="./assets/crown.svg" alt="crown" />
+      <div class="playing-card-container">
+        <div class="playing-card">
+          <img src="./assets/Vector.svg" class="vector" />
+          <img class="crown" src="./assets/crown.svg" alt="crown" />
+          <img
+            class="crown-small top-left"
+            src="./assets/crown-small.svg"
+            alt="crown"
+          />
+          <img
+            class="crown-small top-right"
+            src="./assets/crown-small.svg"
+            alt="crown"
+          />
+          <img
+            class="crown-small bottom-left"
+            src="./assets/crown-small.svg"
+            alt="crown"
+          />
+          <img
+            class="crown-small bottom-right"
+            src="./assets/crown-small.svg"
+            alt="crown"
+          />
+          <img
+            src="./assets/comment-cursors/Comment cursor Some.svg"
+            class="comment-cursor some"
+          />
+          <img
+            src="./assets/comment-cursors/Comment cursor Lina.svg"
+            class="comment-cursor lina"
+          />
+          <img
+            src="./assets/comment-cursors/Comment cursor Chris.svg"
+            class="comment-cursor chris"
+          />
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="horizontal-text-container">
+        <img src="./assets/Horiz..svg" alt="horizontal text" />
+      </div>
+    </section>
+    <section class="skill-section">
+      <div class="skill-card-container">
+        <div class="skill-card-header">
+          <div>
+            <p>nos héros</p>
+            <p>/6 pts</p>
           </div>
+          <div>
+            <h4>l'artiste de renom</h4>
+          </div>
+        </div>
+        <div class="skill-card-body">
+          <img src="./assets/card-1/artiste.png" alt="l'artiste de renom" />
+          <p>
+            <span>Le design</span>, c’est son terrain de jeu. Il maîtrise et
+            retranscris correctement chaque pixel de la maquette.
+          </p>
+          <p>
+            Virtuose des couleurs il ne se trompe jamais de code HEX, de spacing
+            ou de border-radius ;<span
+              >Figma n’a aucun secret pour ce Dev de talent.</span
+            >
+          </p>
+        </div>
+        <div class="skill-card-footer">
+          <img
+            class="sticker-1"
+            src="./assets/card-1/sticker-1.svg"
+            alt="sticker"
+          />
         </div>
       </div>
     </section>
