--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
       </div>
     </section>
     <section>
-      <div class="horizontal-text-container">
-        <img src="./assets/Horiz..svg" alt="horizontal text" />
+      <div class="scroll-container">
+        <p class="scroll-paragraph">A Front les Tous .......</p>
       </div>
     </section>
     <section class="skill-section">
@@ -109,5 +109,6 @@
         </div>
       </div>
     </section>
+    <script src="main.js"></script>
   </body>
 </html>
