--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
     <title>Clash of Dev</title>
   </head>
   <body>
-    <div class="progressbar-wrapper">
-      <div class="progressbar"></div>
-    </div>
     <header class="header">
+      <div class="progressbar-wrapper">
+        <div class="progressbar"></div>
+      </div>
       <div class="container-header">
         <div>
           <span class="badge">LA PISCINE</span>
+        </div>
+        <div>
+          <span class="percentage">0%</span>
         </div>
         <div>
           <label class="switch" aria-label="Toggle theme">
@@ -73,39 +76,217 @@
     </section>
     <section>
       <div class="scroll-container">
-        <p class="scroll-paragraph">A Front les Tous .......</p>
+        <p class="scroll-paragraph">
+          &lt;A&gt;Front les Tous! 🤢 Clash of Dev 🤯
+        </p>
       </div>
     </section>
-    <section class="skill-section">
+    <section>
       <div class="skill-card-container">
-        <div class="skill-card-header">
-          <div>
-            <p>nos héros</p>
-            <p>/6 pts</p>
+        <div class="skill-card skill-1">
+          <div class="skill-card-header">
+            <div>
+              <p>nos héros</p>
+              <p>/6 pts</p>
+            </div>
+            <div>
+              <h5>l'artiste de renom</h5>
+            </div>
           </div>
-          <div>
-            <h4>l'artiste de renom</h4>
-          </div>
-        </div>
-        <div class="skill-card-body">
-          <img src="./assets/card-1/artiste.png" alt="l'artiste de renom" />
-          <p>
-            <span>Le design</span>, c’est son terrain de jeu. Il maîtrise et
-            retranscris correctement chaque pixel de la maquette.
-          </p>
-          <p>
-            Virtuose des couleurs il ne se trompe jamais de code HEX, de spacing
-            ou de border-radius ;<span
-              >Figma n’a aucun secret pour ce Dev de talent.</span
-            >
-          </p>
-        </div>
-        <div class="skill-card-footer">
           <img
-            class="sticker-1"
-            src="./assets/card-1/sticker-1.svg"
-            alt="sticker"
+            src="./assets/card-1/cursor-1.svg"
+            alt="comment-cursor"
+            class="comment-cursor cursor-1"
           />
+          <div class="skill-card-body">
+            <img src="./assets/card-1/artiste-1.png" alt="l'artiste de renom" />
+            <p>
+              <span>Le design</span>, c’est son terrain de jeu. <br />
+              Il maîtrise et retranscris correctement chaque pixel de la
+              maquette.
+            </p>
+            <p>
+              Virtuose des couleurs il ne se trompe jamais de code HEX, de
+              spacing ou de border-radius ; <br />
+              <span>Figma n’a aucun secret pour ce Dev de talent.</span>
+            </p>
+          </div>
+          <div class="skill-card-footer">
+            <img
+              class="sticker-1"
+              src="./assets/card-1/sticker-1.svg"
+              alt="sticker"
+            />
+          </div>
+        </div>
+      </div>
+      <div class="skill-card-container">
+        <div class="skill-card skill-2">
+          <div class="skill-card-header">
+            <div>
+              <p>nos héros</p>
+              <p>/6 pts</p>
+            </div>
+            <div>
+              <h5>LE BÂTISSEUR DE CODE</h5>
+            </div>
+          </div>
+          <img
+            src="./assets/card-2/cursor-2.svg"
+            alt="comment-cursor"
+            class="comment-cursor cursor-1"
+          />
+          <div class="skill-card-body">
+            <img src="./assets/card-2/artiste-2.png" alt="l'artiste de renom" />
+            <p>
+              Ses lignes de code sont des fondations solides. <br />
+              <span>C’est un maître du front</span>, capable de structurer
+              <br />
+              les systèmes les plus complexes sans se <br />
+              casser la tête.
+            </p>
+            <p>
+              <span>Maitre de VSCode</span>, il a surement fini le challenge en
+              s’assurant d’avoir le code le plus clair et le plus propre des 36
+              participants.
+            </p>
+          </div>
+          <div class="skill-card-footer">
+            <img
+              class="sticker-1"
+              src="./assets/card-2/sticker-2.svg"
+              alt="sticker"
+            />
+          </div>
+        </div>
+      </div>
+      <div class="skill-card-container">
+        <div class="skill-card skill-3">
+          <div class="skill-card-header">
+            <div>
+              <p>nos héros</p>
+              <p>/3 pts</p>
+            </div>
+            <div>
+              <h5>LE MAITRE DE LA FLUIDITÉ</h5>
+            </div>
+          </div>
+          <img
+            src="./assets/card-3/cursor-3-1.svg"
+            alt="comment-cursor"
+            class="comment-cursor cursor-1"
+          />
+          <img
+            src="./assets/card-3/cursor-3-2.svg"
+            alt="comment-cursor"
+            class="comment-cursor cursor-2"
+          />
+          <div class="skill-card-body">
+            <img src="./assets/card-3/artiste-3.png" alt="l'artiste de renom" />
+            <p>
+              Aucun composant ne s’affiche sans une
+              <span>animation soignée</span>. Ses transitions sont <br />
+              légères, dynamiques et fluides, captivant l'utilisateur à chaque
+              interaction.
+            </p>
+            <p>
+              Ce dev a l’oeil et maitrise <span>le motion</span> mieux que
+              n’importe qui.
+            </p>
+          </div>
+          <div class="skill-card-footer">
+            <img
+              class="sticker-1"
+              src="./assets/card-3/sticker-3.svg"
+              alt="sticker"
+            />
+          </div>
+        </div>
+      </div>
+      <div class="skill-card-container">
+        <div class="skill-card skill-4">
+          <div class="skill-card-header">
+            <div>
+              <p>nos héros</p>
+              <p>/3 pts</p>
+            </div>
+            <div>
+              <h5>LE CHERCHEUR DE<br />BREAKPOINT</h5>
+            </div>
+          </div>
+          <img
+            src="./assets/card-4/cursor-4-1.svg"
+            alt="comment-cursor"
+            class="comment-cursor cursor-1"
+          />
+          <img
+            src="./assets/card-4/cursor-4-2.svg"
+            alt="comment-cursor"
+            class="comment-cursor cursor-2"
+          />
+          <div class="skill-card-body">
+            <img src="./assets/card-4/artiste-4.png" alt="l'artiste de renom" />
+            <p>
+              Quelle que soit la taille de l’écran, il garantit une expérience
+              utilisateur sans faille. Chaque site
+              <span>s’adapte à tous les supports</span>, du mobile au<br />
+              grand écran.
+            </p>
+            <p>
+              Il fait attention à <span>chaque breakpoint attentivement</span>,
+              on ne pourra pas le reprendre à l’inspection!
+            </p>
+          </div>
+          <div class="skill-card-footer">
+            <img
+              class="sticker-1"
+              src="./assets/card-4/sticker-4.svg"
+              alt="sticker"
+            />
+          </div>
+        </div>
+      </div>
+      <div class="skill-card-container">
+        <div class="skill-card skill-5">
+          <div class="skill-card-header">
+            <div>
+              <p>nos héros</p>
+              <p>/3 pts</p>
+            </div>
+            <div>
+              <h5>LE MAITRE DES SECRETS</h5>
+            </div>
+          </div>
+          <img
+            src="./assets/card-4/cursor-4-1.svg"
+            alt="comment-cursor"
+            class="comment-cursor cursor-1"
+          />
+          <img
+            src="./assets/card-4/cursor-4-2.svg"
+            alt="comment-cursor"
+            class="comment-cursor cursor-2"
+          />
+          <div class="skill-card-body">
+            <img src="./assets/card-4/artiste-4.png" alt="l'artiste de renom" />
+            <p>
+              Quelle que soit la taille de l’écran, il garantit une expérience
+              utilisateur sans faille. Chaque site
+              <span>s’adapte à tous les supports</span>, du mobile au<br />
+              grand écran.
+            </p>
+            <p>
+              Il fait attention à <span>chaque breakpoint attentivement</span>,
+              on ne pourra pas le reprendre à l’inspection!
+            </p>
+          </div>
+          <div class="skill-card-footer">
+            <img
+              class="sticker-1"
+              src="./assets/card-4/sticker-4.svg"
+              alt="sticker"
+            />
+          </div>
         </div>
       </div>
     </section>
