--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
         </p>
       </div>
     </section>
-    <section>
-      <div class="skill-card-container">
-        <div class="skill-card skill-1">
-          <div class="skill-card-header">
+    <section class="card-section">
+      <div class="card-container">
+        <div class="card skill-1">
+          <div class="card-header">
             <div>
               <p>nos héros</p>
               <p>/6 pts</p>
@@ -98,7 +98,7 @@
             alt="comment-cursor"
             class="comment-cursor cursor-1"
           />
-          <div class="skill-card-body">
+          <div class="card-body">
             <img src="./assets/card-1/artiste-1.png" alt="l'artiste de renom" />
             <p>
               <span>Le design</span>, c’est son terrain de jeu. <br />
@@ -111,7 +111,7 @@
               <span>Figma n’a aucun secret pour ce Dev de talent.</span>
             </p>
           </div>
-          <div class="skill-card-footer">
+          <div class="card-footer">
             <img
               class="sticker-1"
               src="./assets/card-1/sticker-1.svg"
@@ -120,9 +120,9 @@
           </div>
         </div>
       </div>
-      <div class="skill-card-container">
-        <div class="skill-card skill-2">
-          <div class="skill-card-header">
+      <div class="card-container">
+        <div class="card skill-2">
+          <div class="card-header">
             <div>
               <p>nos héros</p>
               <p>/6 pts</p>
@@ -136,8 +136,11 @@
             alt="comment-cursor"
             class="comment-cursor cursor-1"
           />
-          <div class="skill-card-body">
-            <img src="./assets/card-2/artiste-2.png" alt="l'artiste de renom" />
+          <div class="card-body">
+            <img
+              src="./assets/card-2/artiste-2.png"
+              alt="le batisseur de code"
+            />
             <p>
               Ses lignes de code sont des fondations solides. <br />
               <span>C’est un maître du front</span>, capable de structurer
@@ -151,7 +154,7 @@
               participants.
             </p>
           </div>
-          <div class="skill-card-footer">
+          <div class="card-footer">
             <img
               class="sticker-1"
               src="./assets/card-2/sticker-2.svg"
@@ -160,9 +163,9 @@
           </div>
         </div>
       </div>
-      <div class="skill-card-container">
-        <div class="skill-card skill-3">
-          <div class="skill-card-header">
+      <div class="card-container">
+        <div class="card skill-3">
+          <div class="card-header">
             <div>
               <p>nos héros</p>
               <p>/3 pts</p>
@@ -181,8 +184,11 @@
             alt="comment-cursor"
             class="comment-cursor cursor-2"
           />
-          <div class="skill-card-body">
-            <img src="./assets/card-3/artiste-3.png" alt="l'artiste de renom" />
+          <div class="card-body">
+            <img
+              src="./assets/card-3/artiste-3.png"
+              alt="le maitre de la fluidité"
+            />
             <p>
               Aucun composant ne s’affiche sans une
               <span>animation soignée</span>. Ses transitions sont <br />
@@ -194,7 +200,7 @@
               n’importe qui.
             </p>
           </div>
-          <div class="skill-card-footer">
+          <div class="card-footer">
             <img
               class="sticker-1"
               src="./assets/card-3/sticker-3.svg"
@@ -203,9 +209,9 @@
           </div>
         </div>
       </div>
-      <div class="skill-card-container">
-        <div class="skill-card skill-4">
-          <div class="skill-card-header">
+      <div class="card-container">
+        <div class="card skill-4">
+          <div class="card-header">
             <div>
               <p>nos héros</p>
               <p>/3 pts</p>
@@ -224,8 +230,11 @@
             alt="comment-cursor"
             class="comment-cursor cursor-2"
           />
-          <div class="skill-card-body">
-            <img src="./assets/card-4/artiste-4.png" alt="l'artiste de renom" />
+          <div class="card-body">
+            <img
+              src="./assets/card-4/artiste-4.png"
+              alt="le chercheur de breakpoint"
+            />
             <p>
               Quelle que soit la taille de l’écran, il garantit une expérience
               utilisateur sans faille. Chaque site
@@ -237,7 +246,7 @@
               on ne pourra pas le reprendre à l’inspection!
             </p>
           </div>
-          <div class="skill-card-footer">
+          <div class="card-footer">
             <img
               class="sticker-1"
               src="./assets/card-4/sticker-4.svg"
@@ -246,9 +255,9 @@
           </div>
         </div>
       </div>
-      <div class="skill-card-container">
-        <div class="skill-card skill-5">
-          <div class="skill-card-header">
+      <div class="card-container">
+        <div class="card skill-5">
+          <div class="card-header">
             <div>
               <p>nos héros</p>
               <p>/3 pts</p>
@@ -258,38 +267,113 @@
             </div>
           </div>
           <img
-            src="./assets/card-4/cursor-4-1.svg"
+            src="./assets/card-5/cursor-5-1.svg"
             alt="comment-cursor"
             class="comment-cursor cursor-1"
           />
           <img
-            src="./assets/card-4/cursor-4-2.svg"
+            src="./assets/card-5/cursor-5-2.svg"
             alt="comment-cursor"
             class="comment-cursor cursor-2"
           />
-          <div class="skill-card-body">
-            <img src="./assets/card-4/artiste-4.png" alt="l'artiste de renom" />
+          <div class="card-body">
+            <img
+              src="./assets/card-5/artiste-5.png"
+              alt="le maître des secrets"
+            />
             <p>
-              Quelle que soit la taille de l’écran, il garantit une expérience
-              utilisateur sans faille. Chaque site
-              <span>s’adapte à tous les supports</span>, du mobile au<br />
-              grand écran.
+              Derrière une ligne de code bien choisie se<br />
+              cache un <span>secret bien gardé</span>. Il glisse la surprise qui
+              surprendra les utilisateurs les plus curieux.
             </p>
             <p>
-              Il fait attention à <span>chaque breakpoint attentivement</span>,
-              on ne pourra pas le reprendre à l’inspection!
+              Dev attentif aux comportements utilisateurs il saura cacher
+              <span>l’Easter Egg</span> au meilleur endroit.
             </p>
           </div>
-          <div class="skill-card-footer">
+          <div class="card-footer">
             <img
               class="sticker-1"
-              src="./assets/card-4/sticker-4.svg"
+              src="./assets/card-5/sticker-5.svg"
               alt="sticker"
             />
           </div>
         </div>
       </div>
+      <div class="card-container">
+        <div class="card skill-6">
+          <div class="card-header">
+            <div>
+              <p>nos héros</p>
+              <p>/3 pts</p>
+            </div>
+            <div>
+              <h5>LE MAITRE DES MAITRES</h5>
+            </div>
+          </div>
+          <img
+            src="./assets/card-6/cursor-6-1.svg"
+            alt="comment-cursor"
+            class="comment-cursor cursor-1"
+          />
+          <img
+            src="./assets/card-6/cursor-6-2.svg"
+            alt="comment-cursor"
+            class="comment-cursor cursor-2"
+          />
+          <div class="card-body">
+            <img
+              src="./assets/card-6/artiste-6.png"
+              alt="le maître des maitres"
+            />
+            <p>
+              Il excelle dans tous les domaines, alliant<br />
+              design, propreté de code, réactivité,<br />
+              animations fluides et créativité cachée.
+              <span>Un vrai prodige</span>
+              qui a su briller dans chaque aspect du développement.
+            </p>
+            <p>
+              Ce dev aux <span>multitalents</span> a reçu la standing<br />
+              ovation du jury.
+            </p>
+          </div>
+          <div class="card-footer">
+            <img
+              class="sticker-1"
+              src="./assets/card-6/sticker-6.svg"
+              alt="sticker"
+            />
+          </div>
+        </div>
+      </div>
+      <div class="card-container">
+        <div class="card skill-7">
+          <div class="card-header">
+            <div>
+              <p>/ FINALE02</p>
+            </div>
+          </div>
+          <div class="card-body">
+            <p>Click me ?</p>
+            <p>Might enter</p>
+            <p>the finals</p>
+          </div>
+          <div class="card-footer"></div>
+        </div>
+      </div>
     </section>
+    <footer class="footer">
+      <div>
+        <span class="badge">LA PISCINE</span>
+      </div>
+      <div>
+        <span class="percentage">100%</span>
+      </div>
+      <div>
+        <span class="date">@2024</span>
+      </div>
+    </footer>
     <script src="main.js"></script>
   </body>
 </html>
