--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
               <p>/6 pts</p>
             </div>
             <div>
-              <h5>l'artiste de renom</h5>
+              <h5>L'ARTISTE DE RENOM</h5>
             </div>
           </div>
           <img
@@ -348,18 +348,45 @@
         </div>
       </div>
       <div class="card-container">
-        <div class="card skill-7">
+        <div class="card skill-7" id="card-7">
           <div class="card-header">
             <div>
               <p>/ FINALE02</p>
             </div>
+            <img src="./assets/card-7/Vector.svg" alt="Vector" />
           </div>
           <div class="card-body">
-            <p>Click me ?</p>
-            <p>Might enter</p>
-            <p>the finals</p>
+            <div class="a">
+              <span>Click</span>
+              <span>Me</span>
+              <span>?</span>
+            </div>
+            <div class="a">
+              <span>Might</span>
+              <span>enter</span>
+            </div>
+            <div>
+              <span>the finals</span>
+            </div>
           </div>
-          <div class="card-footer"></div>
+          <div class="card-footer">
+            <img
+              class="v1"
+              src="./assets/card-7/Vectorasterix.svg"
+              alt="Vector"
+            />
+            <img
+              class="v2"
+              src="./assets/card-7/Vectorbalise.svg"
+              alt="Vector"
+            />
+            <img
+              class="v3"
+              src="./assets/card-7/Vectoreclair.svg"
+              alt="Vector"
+            />
+            <button class="button">Enter Next Level</button>
+          </div>
         </div>
       </div>
     </section>
