--- a/index.html
+++ b/index.html
@@ -11,66 +11,70 @@
     <title>Clash of Dev</title>
   </head>
   <body>
-    <header class="header">
-      <div class="progressbar-wrapper">
-        <div class="progressbar"></div>
+    <div class="container-header">
+      <div class="header-top">
+        <div id="progress-bar"></div>
       </div>
-      <div class="container-header">
-        <div>
-          <span class="badge">LA PISCINE</span>
-        </div>
-        <div>
-          <span class="percentage">0%</span>
-        </div>
-        <div>
-          <label class="switch" aria-label="Toggle theme">
-            <input type="checkbox" checked />
-            <span class="slider"></span>
-          </label>
-        </div>
+      <div class="header-bottom">
+        <span class="badge">LA PISCINE</span>
+        <span class="percentage">0%</span>
+        <label class="switch" aria-label="Toggle theme">
+          <input type="checkbox" checked />
+          <span class="slider"></span>
+        </label>
       </div>
-    </header>
-    <section class="section">
-      <div class="title-container">
-        <h1>Que le plus fort, <span class="italic">l'emporte!</span></h1>
-        <img class="title-badge" src="./assets/1.svg" alt="badge" />
-      </div>
-      <div class="playing-card-container">
-        <div class="playing-card">
-          <img src="./assets/Vector.svg" class="vector" />
-          <img class="crown" src="./assets/crown.svg" alt="crown" />
-          <img
-            class="crown-small top-left"
-            src="./assets/crown-small.svg"
-            alt="crown"
-          />
-          <img
-            class="crown-small top-right"
-            src="./assets/crown-small.svg"
-            alt="crown"
-          />
-          <img
-            class="crown-small bottom-left"
-            src="./assets/crown-small.svg"
-            alt="crown"
-          />
-          <img
-            class="crown-small bottom-right"
-            src="./assets/crown-small.svg"
-            alt="crown"
-          />
-          <img
-            src="./assets/comment-cursors/Comment cursor Some.svg"
-            class="comment-cursor some"
-          />
-          <img
-            src="./assets/comment-cursors/Comment cursor Lina.svg"
-            class="comment-cursor lina"
-          />
-          <img
-            src="./assets/comment-cursors/Comment cursor Chris.svg"
-            class="comment-cursor chris"
-          />
+    </div>
+    <section class="hero-section">
+      <div class="hero-container">
+        <div class="wrapper">
+          <div class="hero-text">
+            <div class="block-1">
+              <span>Que le</span>
+              <div class="block-2">
+                <img class="title-badge" src="./assets/1.svg" alt="badge" />
+              </div>
+            </div>
+            <div class="block-3"><span>plus fort,</span></div>
+            <div class="block-4"><span class="italic">l'emporte!</span></div>
+          </div>
+        </div>
+        <div class="playing-card-container">
+          <div class="playing-card">
+            <img src="./assets/Vector.svg" class="vector" />
+            <img class="crown" src="./assets/crown.svg" alt="crown" />
+            <img
+              class="crown-small top-left"
+              src="./assets/crown-small.svg"
+              alt="crown"
+            />
+            <img
+              class="crown-small top-right"
+              src="./assets/crown-small.svg"
+              alt="crown"
+            />
+            <img
+              class="crown-small bottom-left"
+              src="./assets/crown-small.svg"
+              alt="crown"
+            />
+            <img
+              class="crown-small bottom-right"
+              src="./assets/crown-small.svg"
+              alt="crown"
+            />
+            <img
+              src="./assets/comment-cursors/Comment cursor Some.svg"
+              class="comment-cursor some"
+            />
+            <img
+              src="./assets/comment-cursors/Comment cursor Lina.svg"
+              class="comment-cursor lina"
+            />
+            <img
+              src="./assets/comment-cursors/Comment cursor Chris.svg"
+              class="comment-cursor chris"
+            />
+          </div>
         </div>
       </div>
     </section>
