--- a/index.html
+++ b/index.html
@@ -80,9 +80,14 @@
     </section>
     <section>
       <div class="scroll-container">
-        <p class="scroll-paragraph">
-          &lt;A&gt;Front les Tous! 🤢 Clash of Dev 🤯
-        </p>
+        <div class="scroll-paragraph">
+          <div class="flex">
+            <span>&lt;A&gt;Front les Tous!</span>
+            <img class="balise" src="./assets/balise.svg" alt="Vector" />
+            <span>Clash of Dev</span>
+            <img class="smiley" src="./assets/smiley.svg" alt="Smiley" />
+          </div>
+        </div>
       </div>
     </section>
     <section class="card-section">
@@ -406,5 +411,6 @@
       </div>
     </footer>
     <script src="main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.2/dist/confetti.browser.min.js"></script>
   </body>
 </html>
